--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-	"name": "homebridge-applescript",
+	"name": "homebridge-applescript-status",
 	"version": "0.0.1",
-	"description": "Applescript plugin for homebridge: https://github.com/nfarina/homebridge",
+	"description": "AppleScript plugin for homebridge: https://github.com/nfarina/homebridge",
 	"license": "ISC",
 	"keywords": [
 		"homebridge-plugin"
 	],
 	"engines": {
-		"node": ">=0.12.0",
+		"node": ">=6.0.0",
 		"homebridge": ">=0.2.0"
 	},
 	"author": {
-		"name": "Dan Budiac"
+		"name": "Luke Rhodes"
 	},
 	"repository": {
 		"type": "git",
-		"url": "git://github.com/dansays/homebridge-applescript.git"
+		"url": "git://github.com/lprhodes/homebridge-applescript.git"
 	},
 	"dependencies": {
 		"applescript": "^1.0.0"
